--- a/index.HTML
+++ b/index.HTML
@@ -160,34 +160,67 @@
 </section>
 
 
-    <!-- Section Galerie -->
+<section id="a-propos" class="section-a-propos">
+  <!-- Image à gauche -->
+  <div class="a-propos-image">
+    <img src="jason-goodman-Oalh2MojUuk-unsplash-1.jpg" alt="Notre équipe">
+  </div>
+
+  <!-- Bloc texte à droite -->
+  <div class="a-propos-texte">
+    <h2>À propos de nous</h2>
+    <p>
+      AgenceEco s'engage à accompagner les entreprises et les collectivités vers un avenir plus durable.
+      Notre équipe met son expertise au service de projets éthiques, innovants et respectueux de l’environnement.
+    </p>
+<!-- Icônes en cercle sous la section -->
+<div class="a-propos-icones">
+  <div class="icone">
+    <div class="cercle-noir">
+      <img src="Vector-2.jpg" alt="Écologique">
+    </div>
+    <p><strong>Écologique</strong></p>
+  </div>
+  <div class="icone">
+    <div class="cercle-noir">
+      <img src="Vector-3.jpg" alt="Responsable">
+    </div>
+    <p><strong>Responsable</strong></p>
+  </div>
+  <div class="icone">
+    <div class="cercle-noir">
+      <img src="Vector-4.jpg" alt="Assistance 24/7">
+    </div>
+    <p><strong>24/7 Assistance</strong></p>
+  </div>
+</section>
+
+
+<!-- Section Galerie -->
     <section id="galerie">
-      <h2>Galerie</h2>
+      <h2>Notre Galerie</h2>
+      <p>Découvrez quelques-uns de nos projets récents.</p>
       <div class="slider">
         <img src="kevin-bhagat-zNRITe8NPqY-unsplash1.jpg" alt="Projet 1" />
       </div>
     </section>
 
 
-</section>
-    <section id="footer">
-      <h2>À propos de nous</h2>
-      <p>AgencEco est une agence spécialisée dans l'accompagnement des entreprises vers une transition éco-responsable.</p>
-    </section> 
-
 
   </main>
+
+  
+  <a href="connexion.html">
+  <button>Me connecter</button>
+</a>
+
 
   <footer>
     <p>&copy; 2025 AgencEco - Tous droits réservés.</p>
   </footer>
 
+
   <!-- Script JavaScript -->
   <script src="script.js" defer></script>
 </body>
 </html>
-
-<section>
-  <h2>Dernières actualités</h2>
-  <div id="last-articles"></div>
-</section>
